--- a/package.json
+++ b/package.json
@@ -34,20 +34,20 @@
     "test": "vitest -u"
   },
   "peerDependencies": {
-    "unocss": "~0.64.0"
+    "unocss": "^0.65.0"
   },
   "dependencies": {
-    "@unocss/rule-utils": "^0.64.0"
+    "@unocss/rule-utils": "^0.65.1"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^3.8.0",
+    "@antfu/eslint-config": "^3.11.2",
     "@antfu/utils": "^0.7.10",
-    "@types/node": "^22.9.0",
-    "bumpp": "^9.8.1",
-    "eslint": "^9.14.0",
-    "typescript": "^5.6.3",
+    "@types/node": "^22.10.2",
+    "bumpp": "^9.9.0",
+    "eslint": "^9.16.0",
+    "typescript": "^5.7.2",
     "unbuild": "^2.0.0",
-    "unocss": "^0.64.0",
-    "vitest": "^2.1.4"
+    "unocss": "^0.65.1",
+    "vitest": "^2.1.8"
   }
 }
