--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -25,6 +25,9 @@
     "jsonc",
     "yaml",
     "toml"
+  ],
+  "cSpell.words": [
+    "avenir"
   ]
 
   // Silent the stylistic rules in you IDE, but still auto fix them
