--- a/package.json
+++ b/package.json
@@ -34,20 +34,19 @@
     "test": "vitest -u"
   },
   "peerDependencies": {
-    "unocss": "^0.65.0"
-  },
-  "dependencies": {
-    "@unocss/rule-utils": "^0.65.1"
+    "unocss": "^66.0.0"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^3.11.2",
-    "@antfu/utils": "^0.7.10",
-    "@types/node": "^22.10.2",
-    "bumpp": "^9.9.0",
-    "eslint": "^9.16.0",
-    "typescript": "^5.7.2",
-    "unbuild": "^2.0.0",
-    "unocss": "^0.65.1",
-    "vitest": "^2.1.8"
+    "@antfu/eslint-config": "^4.3.0",
+    "@antfu/utils": "^9.1.0",
+    "@types/node": "^22.13.5",
+    "@unocss/rule-utils": "^66.0.0",
+    "bumpp": "^10.0.3",
+    "eslint": "^9.21.0",
+    "scule": "^1.3.0",
+    "typescript": "^5.7.3",
+    "unbuild": "^3.3.1",
+    "unocss": "^66.0.0",
+    "vitest": "^3.0.6"
   }
 }
