--- a/package.json
+++ b/package.json
@@ -38,11 +38,12 @@
   },
   "devDependencies": {
     "@antfu/eslint-config": "^4.3.0",
-    "@antfu/utils": "^9.1.0",
+    "@types/lodash.set": "^4.3.9",
     "@types/node": "^22.13.5",
     "@unocss/rule-utils": "^66.0.0",
     "bumpp": "^10.0.3",
     "eslint": "^9.21.0",
+    "lodash.set": "^4.3.2",
     "scule": "^1.3.0",
     "typescript": "^5.7.3",
     "unbuild": "^3.3.1",
