--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "unocss-preset-colors",
   "type": "module",
-  "version": "0.2.4",
-  "description": "Defining dark colors in UnoCSS",
+  "version": "1.1.4",
+  "description": "Defining Dark Colors in UnoCSS",
   "author": "Jiakun Zhao <hi@zhaojiakun.com>",
   "license": "MIT",
   "homepage": "https://github.com/jiakun-zhao/unocss-preset-colors#readme",
@@ -38,16 +38,14 @@
   },
   "devDependencies": {
     "@antfu/eslint-config": "^4.3.0",
-    "@types/lodash.set": "^4.3.9",
+    "@jiakun-zhao/utils": "^1.3.0",
     "@types/node": "^22.13.5",
     "@unocss/rule-utils": "^66.0.0",
     "bumpp": "^10.0.3",
     "eslint": "^9.21.0",
-    "lodash.set": "^4.3.2",
-    "scule": "^1.3.0",
     "typescript": "^5.7.3",
     "unbuild": "^3.3.1",
     "unocss": "^66.0.0",
-    "vitest": "^3.0.6"
+    "vitest": "^3.0.7"
   }
 }
